--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "image-quality-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "api/check-quality.js",
+  "scripts": {
+    "start": "node api/check-quality.js"
+  },
   "dependencies": {
-    "sharp": "^0.33.0",
-    "formidable": "^3.5.0"
+    "sharp": "^0.33.0"
   }
 }
