--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "image-quality-api",
+  "name": "check-quality",
   "version": "1.0.0",
+  "description": "",
   "main": "api/check-quality.js",
   "scripts": {
     "start": "node api/check-quality.js"
   },
   "dependencies": {
-    "sharp": "^0.33.0"
+    "express": "^4.18.2",
+    "sharp": "^0.33.5"
   }
 }
